# py-airtrain

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
examples/ainews/: README.md  ingest_ainews.py  requirements.txt
src/airtrain/: __init__.py  client.py  core.py
src/airtrain/integrations/: pandas.py  polars.py
src/airtrain/integrations/llamaindex/: __init__.py  core.py
src/airtrain/integrations/llamaindex/tests/: test_llamaindex_core.py
src/airtrain/integrations/tests/: test_pandas.py  test_polars.py
src/tests/: fixtures.py  test_client.py  test_core.py  utils.py
